# sam-3d-tvm

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
NOTES/: PROGRESS-LOG.md  SAM-3D-ANALYSIS.md  TVM-PORT-PLAN.md
src/sam_3d_tvm/: __init__.py
src/sam_3d_tvm/scripts/: port_dino.py
tests/: test_tvm_import.py
