[project]
name = "sam-3d-tvm"
version = "0.1.0"
description = "SAM 3D with TVM acceleration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yunho Cho", email = "ycho358@example.com" }]
keywords = ["sam", "3d", "tvm", "segmentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov", "mypy"]

[project.urls]
Homepage = "https://github.com/ycho358/sam-3d-tvm"
Repository = "https://github.com/ycho358/sam-3d-tvm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_3d_tvm"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=sam_3d_tvm {args:tests}"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy src"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["external"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sam_3d_tvm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
sam-3d-tvm = { path = ".", editable = true }
tvm = { path = "external/tvm/python", editable = true }
apache-tvm-ffi = { path = "external/tvm/3rdparty/tvm-ffi", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"

[tool.pixi.tasks]
build-tvm = "bash scripts/build_tvm.sh"
test = "pytest tests/"
test-cov = "pytest --cov=sam_3d_tvm tests/"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy src"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
